[add]ユーザーログイン画面

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
         <%= yield %>
       </main>
  
-    <footer>Copyright © Infratop Inc. All Rights Reserved.</footer>
+    <footer class="text-center">Copyright © Infratop Inc. All Rights Reserved.</footer>
   </body>
 </html>
