--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
           <% if admin_signed_in? %>
             <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% elsif user_signed_in? %>
+            <li><%= link_to '投稿する', new_post_image_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% else %>
             <li><%= link_to '新規登録', new_user_registration_path, class: 'nav-link text-dark' %></li>
