--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -32,7 +32,7 @@
             </div>
             <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", id: "inputConfirmPassword", placeholder: "パスワード確認" %>
           </div>
-          <%= f.submit "サインアップ", class: "btn btn-block btn-info mt-4" %>
+          <%= f.submit "サインアップ", class: "btn btn-block btn-success mt-4" %>
         <% end %>
         <div class="mx-auto text-center my-4">
           <p>アカウントをお持ちですか？ <%= link_to "ログインする", new_user_session_path %></p>
