[add]他ユーザーからのアクセス制限

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,6 @@
       <main class="mb-auto">
         <%= yield %>
       </main>
- 
-    <footer class="text-center">Copyright © Infratop Inc. All Rights Reserved.</footer>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
