--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="bg-dark text-white pt-5 pb-4">
   <div class="container">
     <div class="row no-gutters">
-      <div class="">
+      <div class="col-md-4">
         <p>Copyright © Infratop Inc. All Rights Reserved.</p>
       </div>
     </div>
