--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,23 +1,11 @@
 <div class="container">
   <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
-      <h4 class="text-dark bg-light py-4 mb-0">Gachamania</h4>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+      <h4 class="text-dark text-center bg-light py-4 mb-0">Gachamania</h4>
       <div class="form-body p-4">
         <div class="mx-auto text-center mb-4">
           <p>ユーザー新規登録</p>
         </div>
-        
-        <% if resource.errors.any? %>
-          <ul class="alert alert-danger" role="alert">
-            <h6 class="alert-heading">
-              <%= resource.errors.count %>件のエラーが発生しました
-            </h6>
-            <% resource.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        <% end %>
-        
         <%= form_with model: resource, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
           <%= render "public/shared/error_messages", resource: resource %>
           <div class="input-group mb-3">
@@ -30,13 +18,13 @@
             <div class="input-group-prepend">
               <span class="input-group-text" aria-hidden="true"><i class="fas fa-envelope"></i></span>
             </div>
-            <%= f.email_field :email, autofocus: true, class: "form-control", id: "inputEmail", placeholder: "メールアドレス" %>
+            <%= f.email_field :email, autofocus: true, class: "form-control is-invalid", id: "inputEmail", placeholder: "メールアドレス" %>
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" aria-hidden="true"><i class="fas fa-lock"></i></span>
             </div>
-            <%= f.password_field :password, autocomplete: "off", class: "form-control", id: "inputPassword", placeholder: "パスワード(6文字以上)" %>
+            <%= f.password_field :password, autocomplete: "off", class: "form-control is-invalid", id: "inputPassword", placeholder: "パスワード(6文字以上)" %>
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
