[add]フラッシュメッセージ

--- a/app/views/public/post_images/new.html.erb
+++ b/app/views/public/post_images/new.html.erb
@@ -3,16 +3,7 @@
     <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">画像投稿フォーム</h5>
       <div class="form-body p-4">
-        <% if @post_image.errors.any? %>
-          <ul class="alert alert-danger" role="alert">
-            <h6 class="alert-heading">
-              <%= @post_image.errors.count %>件のエラーが発生しました
-            </h6>
-            <% @post_image.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        <% end %>
+        <%= render "layouts/error_messages", resource: @post_image %>
         <%= form_with model: @post_image do |f| %>
           <%= f.file_field :image, accept: "image/*", class: "w-100" %>
           <div class="input-group mb-3 mt-4">
