--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <%= render 'layouts/header' %>
       <main class="mb-auto">
+        <%= render 'layouts/flash_message' %>
         <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
