--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,13 +8,13 @@
         </div>
         <div class="btn-wrapper col-10 mx-auto mb-4">
           <div class="row">
-            <%= link_to 'ゲストログイン(閲覧用)', users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
+            <%= link_to 'ゲストログイン(閲覧用)', users_guest_sign_in_path, class: "btn btn-secondary btn-block mb-3 sign_in", method: :post %>
           </div>
           <div class="row">
-            <%= link_to "ログイン", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+            <%= link_to "ログイン", new_user_session_path, class: "btn btn-info btn-block mb-3 sign_in" %>
           </div>
           <div class="row">
-            <%= link_to "サインアップ", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+            <%= link_to "サインアップ", new_user_registration_path, class: "btn btn-success btn-block sign_up" %>
           </div>
         </div>
       </div>
