--- a/app/views/public/post_images/show.html.erb
+++ b/app/views/public/post_images/show.html.erb
@@ -6,7 +6,7 @@
   <p>ユーザーネーム：<%= @post_image.user.name %></p>
   <p>投稿日：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
   <% if @post_image.user == current_user %>
-    <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+    <%= link_to "削除", post_image_path(@post_image), method: :delete, data: {confirm: "この投稿を削除しますか?"} %>
   <% end %>
   <% if @post_image.favorited_by?(current_user) %>
     <p>
