--- a/app/views/layouts/_flash_message.html.erb
+++ b/app/views/layouts/_flash_message.html.erb
@@ -1,3 +1,3 @@
-<% flash.each do |message_type, message| %>
-　　<div class="alert alert-<%= message_type %>"><%= message %><button type="button" class="close" data-dismiss="alert">&times;</button></div>
+<% flash.each do |key, message| %>
+　　<div class="alert alert-<%= message_type(key) %>"><%= message %><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
 <% end %>
