--- a/app/views/public/post_images/show.html.erb
+++ b/app/views/public/post_images/show.html.erb
@@ -1,8 +1,24 @@
+<div class="container">
+  <div class="card mx-auto mt-4 shadow-lg">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-sm-12 col-md-2">
+          <%= image_tag @post_image.user.get_profile_image(100,100), class: "rounded-circle"; %>
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <p class="card-title">
+            <%= link_to (post_image_path(post_image.id), class: "text-dark") do %>
+              <strong><i class="far fa-flag"></i><span> <%= @post_image.shop_name %></span></strong>
+            <% end %>
+          </p>
+        </div>
+      
+    
 <div>
   <%= image_tag @post_image.get_image %>
   <p>ショップ名：<%= @post_image.shop_name %></p>
   <p>説明：<%= @post_image.caption %></p>
-  <p>投稿ユーザー画像：<%= image_tag @post_image.user.get_profile_image(100,100) %></p>
+  <p>投稿ユーザー画像：</p>
   <p>ユーザーネーム：<%= @post_image.user.name %></p>
   <p>投稿日：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
   <% if @post_image.user == current_user %>
@@ -36,7 +52,13 @@
 </div>
 <div>
   <%= form_with model: [@post_image, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントを追加..." %>
     <%= f.submit "送信する" %>
   <% end %>
+</div>
+
+        
+      </div>
+    </div>
+  </div>
 </div>
