--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,8 +1,18 @@
-<h2>プロフィール編集</h2>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  
-  <%= f.submit "変更を保存" %>
-<% end %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light py-4 mb-0">プロフィール編集</h5>
+      <div class="form-body p-4">
+        <%= render "layouts/error_messages", resource: @user %>
+        <%= form_with model: @user do |f| %>
+          <div class="input-group mb-3 mt-4">
+            <%= f.text_field :name, class: "form-control", placeholder: "ユーザー名" %>
+          </div>
+          <%= f.file_field :profile_image, accept: "image/*", class: "w-100" %>
+          <hr>
+          <%= f.submit '保存', class: "btn btn-block btn-info mb-3 mt-4" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
