[add]レイアウト編集

--- a/app/views/public/post_images/_list.html.erb
+++ b/app/views/public/post_images/_list.html.erb
@@ -16,8 +16,19 @@
             <% end %>
           </p>
           <p class="card-text">説明：<%= post_image.caption %></p>
-          <span><i class="fas fa-user"></i> By <%= post_image.user.name %> ｜ </span>
-          <span><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class: "text-dark" %></span>
+          <span><i class="fas fa-user"></i> <%= post_image.user.name %> ｜ </span>
+          <span><i class="fas fa-heart"></i>
+            <% if post_image.favorited_by?(current_user) %>
+              <%= link_to post_image_favorites_path(post_image), class: "text-dark", method: :delete do %>
+                <%= post_image.favorites.count %>
+              <% end %>
+            <% else %>
+              <%= link_to post_image_favorites_path(post_image), class: "text-dark",method: :post do %>
+                <%= post_image.favorites.count %>
+              <% end %>
+            <% end %> ｜ 
+          </span>
+          <span><i class="fas fa-comment"></i> <%= link_to "#{post_image.post_comments.count}", post_image_path(post_image.id), class: "text-dark" %></span>
         </div>
       </div>
     </div>
