--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <% if admin_signed_in? %>
+            <li><%= link_to '会員一覧', admin_users_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% elsif user_signed_in? %>
             <li><%= link_to '投稿', new_post_image_path, class: 'nav-link text-dark' %></li>
