--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -13,10 +13,6 @@
           </thaed>
           <tbody>
             <tr>
-              <td>会員ID</td>
-              <td colspan="2"><%= @user.id %></td>
-            </tr>
-            <tr>
               <td>ユーザー名</td>
               <td colspan="2"><%= @user.name %></td>
             </tr>
@@ -26,16 +22,12 @@
             </tr>
             <tr>
               <td>会員ステータス</td>
-              <td colspan="2">
-					      <% if @user.is_active? %>
-						      <span class="text-success">有効</span>
-					      <% else %>
-						      <span class="text-invalid">退会済み</span>
-					      <% end %>
-				      </td>
+              <td><%= f.radio_button :is_active, true %><%= f.label :is_active, "有効", class: "text-success" %></td>
+              <td><%= f.radio_button :is_active, false %><%= f.label :is_active, "利用停止", class: "text-danger" %></td>
             </tr>
             <tr>
               <td></td>
+              <td colspan="3"><%= f.submit "更新", class: "btn btn-success" %></td>
             </tr>
           </tbody>
         </table>
