--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -21,7 +21,7 @@
         <% if user.is_active? %>
 					<span class="text-success">有効</span>	
 				<% else %>
-					<span class="text-invalid">退会済み</span>
+					<span class="text-danger">利用停止</span>
 				<% end %>
       </td>
       <td><%= link_to "編集", edit_admin_user_path(user), class: "btn btn-sm btn-block btn-info" %></td>
