[add]レイアウト編集

--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -5,10 +5,12 @@
       <div class="form-body p-4">
         <%= render "layouts/error_messages", resource: @user %>
         <%= form_with model: @user do |f| %>
-          <div class="input-group mb-3 mt-4">
+          <div class="input-group mb-4 mt-4">
             <%= f.text_field :name, class: "form-control", placeholder: "ユーザー名" %>
           </div>
-          <%= f.file_field :profile_image, accept: "image/*", class: "w-100" %>
+          <div class="input-group mb-4 mt-4">
+            <%= f.file_field :profile_image, accept: "image/*", class: "w-100" %>
+          </div>
           <hr>
           <%= f.submit '保存', class: "btn btn-block btn-info mb-3 mt-4" %>
         <% end %>
