--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,9 +1,20 @@
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user.id == current_user.id %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
+<div class="container py-4">
+  <div class="w-50 mx-auto mt-4">
+    <div class="row">
+      <div class="col-4">
+        <%= image_tag @user.get_profile_image(100,100), class: "rounded-circle"; %>
+      </div>
+      <div class="col-8">
+        <h3><%= @user.name %> ｜ 
+          <% if @user.id == current_user.id %>
+            <%= link_to edit_user_path(@user), class: "text-dark" do %>
+              <i class="fa-solid fa-gear"></i>
+            <% end %>
+          <% end %>
+        </h3>
+      </div>
+    </div>
+  </div>
 </div>
 
 <%= render 'public/post_images/list', post_images: @post_images %>
