[add]フォロー・フォロワー機能

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,7 +19,7 @@
               <td><%= user.email %></td>
               <td>
               <% if user.is_active? %>
-					      <span class="text-success">有効</span>	
+					      <span class="text-success"><strong>有効</strong></span>	
 				      <% else %>
 					      <span class="text-danger">利用停止</span>
 				      <% end %>
