--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -22,7 +22,7 @@
             </tr>
             <tr>
               <td>会員ステータス</td>
-              <td><%= f.radio_button :is_active, true %><%= f.label :is_active, "有効", class: "text-success" %></td>
+              <td><strong><%= f.radio_button :is_active, true %><%= f.label :is_active, "有効", class: "text-success" %></strong></td>
               <td><%= f.radio_button :is_active, false %><%= f.label :is_active, "利用停止", class: "text-danger" %></td>
             </tr>
             <tr>
