--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,8 +1,49 @@
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-7 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light py-4 mb-0">Gachamania</h5>
+      <div class="form-body p-4">
+        <table class='table table-hover'>
+  <thead>
+    <tr>
+      <th>ユーザー</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr><%= link_to user, class: "user_#{user.id}" do %>
+        <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle"; %></td>
+        <td><%= user.name %></td>
+        <td>フォロワー: <%= user.followers.count %></td>
+        <td>フォロー中: <%= user.followings.count %></td>
+        <td>
+          <% if current_user != user%>
+            <% if current_user.following?(user) %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: 'btn btn-sm btn-secondary' %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-sm btn-primary' %>
+            <% end %>
+          <% end %>
+        </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class='table'>
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th>ユーザー</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
