--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -1,8 +1,7 @@
-<table class='table'>
+<table class='table table-hover'>
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th>ユーザー</th>
       <th></th>
       <th></th>
       <th></th>
@@ -12,21 +11,24 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= image_tag user.get_profile_image(50,50) %></td>
+        <td>
+          <%= link_to user, class: "user_#{user.id}" do %>
+            <%= image_tag user.get_profile_image(50,50), class: "rounded-circle"; %>
+          <% end %>
+        </td>
         <td><%= user.name %></td>
-        <td>フォロー数: <%= user.followings.count %></td>
-        <td>フォロワー数: <%= user.followers.count %></td>
+        <td>フォロワー: <%= link_to user.followers.count, user_followers_path(user), class: "text-dark" %></td>
+        <td>フォロー中: <%= link_to user.followings.count, user_followings_path(user), class: "text-dark" %></td>
         <td>
           <% if current_user != user%>
             <% if current_user.following?(user) %>
-              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: 'btn btn-sm btn-secondary' %>
             <% else %>
-              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-sm btn-primary' %>
             <% end %>
           <% end %>
         </td>
-        <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
-      </tr>
+       </tr>
     <% end %>
   </tbody>
 </table>
