--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -15,11 +15,15 @@
   </thead>
   <tbody>
     <% @users.each do |user| %>
-      <tr><%= link_to user, class: "user_#{user.id}" do %>
-        <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle"; %></td>
+      <tr>
+        <td>
+          <%= link_to user, class: "user_#{user.id}" do %>
+            <%= image_tag user.get_profile_image(50,50), class: "rounded-circle"; %>
+          <% end %>
+        </td>
         <td><%= user.name %></td>
-        <td>フォロワー: <%= user.followers.count %></td>
-        <td>フォロー中: <%= user.followings.count %></td>
+        <td>フォロワー: <%= link_to user.followers.count, user_followers_path(user), class: "text-dark" %></td>
+        <td>フォロー中: <%= link_to user.followings.count, user_followings_path(user), class: "text-dark" %></td>
         <td>
           <% if current_user != user%>
             <% if current_user.following?(user) %>
@@ -29,7 +33,6 @@
             <% end %>
           <% end %>
         </td>
-        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -38,36 +41,3 @@
     </div>
   </div>
 </div>
-
-<table class='table'>
-  <thead>
-    <tr>
-      <th>ユーザー</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= image_tag user.get_profile_image(50,50) %></td>
-        <td><%= user.name %></td>
-        <td>フォロー数: <%= user.followings.count %></td>
-        <td>フォロワー数: <%= user.followers.count %></td>
-        <td>
-          <% if current_user != user%>
-            <% if current_user.following?(user) %>
-              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-            <% else %>
-              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-            <% end %>
-          <% end %>
-        </td>
-        <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
