--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
             <li><%= link_to '会員一覧', admin_users_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% elsif user_signed_in? %>
+            <li><%= link_to '検索', search_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to 'ユーザー', users_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to '投稿', new_post_image_path, class: 'nav-link text-dark' %></li>
             <li><%= link_to 'プロフィール', user_path(current_user.id), class: 'nav-link text-dark' %></li>
