--- a/app/views/public/users/_search.html.erb
+++ b/app/views/public/users/_search.html.erb
@@ -10,10 +10,31 @@
               <th></th>
               <th></th>
               <th></th>
+              <th></th>
             </tr>
           </thaed>
           <tbody>
-            
+            <% users.each do |user| %>
+            <tr>
+              <td>
+                <%= link_to user, class: "user_#{user.id}" do %>
+                  <%= image_tag user.get_profile_image(50,50), class: "rounded-circle"; %>
+                <% end %>
+              </td>
+              <td><%= user.name %></td>
+              <td>フォロワー: <%= link_to user.followers.count, user_followers_path(user), class: "text-dark" %></td>
+              <td>フォロー中: <%= link_to user.followings.count, user_followings_path(user), class: "text-dark" %></td>
+              <td>
+                <% if current_user != user%>
+                  <% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: 'btn btn-sm btn-secondary' %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-sm btn-primary' %>
+                  <% end %>
+                <% end %>
+              </td>
+            </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
