--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %></li>
           <% elsif user_signed_in? %>
             <li class="mt-3"><%= link_to 'ユーザー', users_path, class: 'nav-link text-dark' %></li>
-            <li class="mt-3"><%= link_to '新規投稿', new_post_image_path, class: 'nav-link text-dark' %></li>
+            <li class="mt-3"><%= link_to '投稿', new_post_image_path, class: 'nav-link text-dark' %></li>
             <li class="mt-3"><%= link_to 'プロフィール', user_path(current_user.id), class: 'nav-link text-dark' %></li>
             <li class="mt-3"><%= link_to '投稿一覧', post_images_path, class: 'nav-link text-dark' %></li>
             <li class="mt-3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
